# Embedded_Linux

./: .notes.txt.swp  README.md
.cache/clangd/index/: MySQLHandler.cpp.3492B48EE0739BF3.idx  MySQLHandler.h.7D83C8546A454CDD.idx  addRecord.cpp.1D31AEEF0A1C803F.idx  addRecord.h.18371FDFF612C398.idx  connectToDatabase.cpp.1BD7E51DCD898890.idx  connectToDatabase.h.93F76428933A293E.idx  deleteRecord.cpp.B190E836E83B7F64.idx  deleteRecord.h.68904DF59C107BEE.idx  main.cpp.6DA7B738BA7C16ED.idx  main.h.F7BB9A3D1185921C.idx  updateRecord.cpp.E0D4231D266E6323.idx  updateRecord.h.B27A55AC2D168ED9.idx
JS/Angular/basics/my-angular-app/: package-lock.json
JS/basics/: main.js  package-lock.json  package.json
c++/STL/Containers/malloc/: memalloc.c
c++/backend/MyUsers/: CMakeLists.txt  config.h  main.cpp  test
c++/backend/Users_DB/: .gitignore  main.cpp  myBuild  myKey.h
c++/backend/Users_DB/src/: main.cpp
c++/backend/networking/boost/myServer/: myServer.cpp
c++/backend/networking/boost/pandaNet/pandaServer/: main.cpp
c++/backend/networking/httpServer/src/: CMakeLists.txt  main.cpp  request.cpp
c++/backend/networking/web/: index.html
c++/backend/networking/web/web2/: main.cpp
c++/basics/: a.out  carAPI.cpp  first.cpp
c++/basics/concurrency/con1/: CMakeLists.txt  main
c++/basics/json/: CMakeLists.txt  main.cpp
c++/basics/networking/: start.cpp
c++/basics/networking/boost/myServer/: myServer.cpp
c++/basics/networking/web/web2/: CMakeLists.txt  main.cpp
c++/basics/networking/web3/myServer/: http_TCPServer.h  http_http_TCPServer.cpp  server.cpp
c++/basics/networking/webSockets/webSocketsStart/: main.cpp
c++/classes/: a.out  file.cpp  main.cpp
c++/general/concurrency/con1/: main.cpp
c++/general/serialReader/include/: serial_reader.h
c++/general/trying/: .trying.swp  transfomr.cpp
c++/simulator/: CMakeLists.txt  run.sh
c++/simulator/include/: main.h  serial_reader.h
c++/simulator/src/: main.cpp  network_sender.cpp  serial_reader.cpp
c++/simulator/test/: test  test.cpp
c++/users_DB/: CMakeLists.txt  main.cpp  my_program
c++/users_DB/MySQLHandler/: MySQLHandler.h
c++/users_DB/MySQLHandler/connectToDatabase/: connectToDatabase.h
c++/users_DB/addRecord/: addRecord.h
c++/users_DB/deleteRecord/: deleteRecord.h
c++/users_DB/include/: main.h
c++/users_DB/readRecord/: readRecord.h
c++/users_DB/src/: main.cpp
c++/users_DB/updateRecord/: updateRecord.h
plan/: index.html  plan.html  styles.css
plan/Pandas/: pandas.css  pandas.html
plan/networking/: networking.html
python/Web_Scraping/: from_web
python/pyautogui/: VSExtension.py
